mongodb/03_mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-deployment
  namespace: mongo_application
  labels:
    app: mongo
spec:
  replicas: 1 #How many Pods you want to creat
  selector:
    matchLabels:
      app: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - name: mongodb
        image: mongo:5.0
        ports:
        - containerPort: 27017
--- #separet file
apiVersion: v1
kind: Service
metadata:
  name: mongo-service #endpoint to access
  namespace: mongo_application
spec:
  selector: #select pods to forward the request to
    app: mongo #should match the pods label
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017 #containerPort of Deployment same as containerport
