mongodb/05_webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: mongoapplication
  labels:
    app: webapp
spec:
  replicas: 1 #How many Pods you want to creat
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: nanajanashia/k8s-demo-app:v1.0
        ports:
        - containerPort: 3000
--- #separet file
apiVersion: v1
kind: Service
metadata:
  name: webapp-service #endpoint to access
  namespace: mongoapplication
spec:
  type: NodePort
  selector: #select pods to forward the request to
    app: webapp #should match the pods label
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000 #containerPort of Deployment same as containerport
      nodePort: 30100
