mongodb/06_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: mongo-ingress
    namespace: mongoapplication
    annotations:
        haproxy.org/path-rewrite: "/"
        kubernetes.io/ingress.class: "haproxy"
        haproxy.org/ingress.class: "haproxy"
spec:
    rules:
    - http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: mongo-service
              port:
                number: 27017
